# useshortcut-py

./: .gitignore  API_REVIEW.md  BREAKING_CHANGES.md  CLAUDE.md  MODEL_FIXES_SUMMARY.md  Makefile  Pipfile  README.md  cli.py  pyproject.toml  setup.py  shortcut-api-v3.yaml  tasks.py  update_epic.py
.github/: PYPI_PUBLISHING.md  dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  github-actions.yml  poetry_actions.yml  publish-release.yml  publish.yml
docs/: API_COVERAGE_REPORT.md  API_REVIEW.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  PUBLISHING.md  TEST_PLAN.md
tests/: README_DYNAMIC_FACTORIES.md  conftest.py  demo_dynamic_factory.py  dynamic_factories.py  test_api_client.py  test_api_client_extended.py  test_api_client_simple.py  test_client.py  test_comments.py  test_custom_fields.py  test_docs.py  test_dynamic_api_client.py  test_factory_examples.py  test_integration.py  test_milestones.py  test_models_helpers.py  test_tasks.py
useshortcut/: __init__.py  client.py  models.py
