[tool.poetry]
name = "useshortcut"
version = "0.0.1"
description = "A rest client for the Shortcut REST API"
authors = ["Ivan Willig <iwillig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/iwillig/useshortcut-py"
Issues = "https://github.com/iwillig/useshortcut-py/issues"