[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "useshortcut"
version = "0.0.9"
description = "A REST client for the Shortcut REST API"
authors = [
    {name = "Ivan Willig", email = "iwillig@gmail.com"},
    {name = "Chris Demwell", email = "cdemwell@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
]
keywords = ["shortcut", "api", "client", "rest", "project-management", "clubhouse"]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "twine>=4.0.0",
    "wheel>=0.40.0",
    "build>=0.10.0",
    "invoke>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/iwillig/useshortcut-py"
Issues = "https://github.com/iwillig/useshortcut-py/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["useshortcut*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
# Enable all recommended rules (E, F, I for isort, W for pycodestyle warnings)
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort (import sorting)
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade (Python upgrade checks)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Like Black, use double quotes for strings
quote-style = "double"
# Like Black, indent with spaces
indent-style = "space"
# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false
# Like Black, automatically detect line ending
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
